@@ -53,6 +53,7 @@
   - remove DEPRECATED execute method(DBIx::Custom)'s sqlfilter option
   - remove DEPRECATED update_timestamp
   - remove DEPRECATED insert_timestamp
+  - remove DEPRECATED select method relation option
 
 0.37
   - catch up Object::Simple 3.16. fix DEPRECATED warnings.
